# papyrus

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  biome.json  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/skills/: add-new-tool.md  backend-api.md  backend-auth.md  backend-db.md  backend-pdf-tools.md  backend-workers.md  conventions.md  engineering-baseline.md  frontend-architecture.md  frontend-data.md  repo-structure.md  tooling.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/src/papyrus_api/: __main__.py  lifespan.py  main.py
apps/api/src/papyrus_api/api/: deps.py  router.py
apps/api/src/papyrus_api/api/v1/: __init__.py  auth.py  documents.py  health.py  jobs.py  users.py
apps/api/src/papyrus_api/core/: config.py  cookies.py  errors.py  filenames.py  ids.py  logging.py  pagination.py  rate_limit.py  request_client.py  security.py  telemetry.py
apps/api/src/papyrus_api/db/: base.py  mixins.py  session.py
apps/api/src/papyrus_api/db/migrations/: env.py
apps/api/src/papyrus_api/db/migrations/versions/: 20260506_0635_initial_schema.py  20260506_1400_auth_password_resets_and_user_indexes.py  20260506_1500_perf_indexes.py  20260506_1700_compress_pipeline.py  20260516_1000_refresh_tokens.py  20260516_1100_storage_objects_document_id.py  20260516_1300_anonymous_flag_and_tools.py  20260527_1000_reset_token_purpose.py  20260527_1100_refresh_token_family.py  20260527_1200_audit_events.py
apps/api/src/papyrus_api/domain/: __init__.py
apps/api/src/papyrus_api/domain/audit/: __init__.py  models.py
apps/api/src/papyrus_api/domain/documents/: __init__.py  models.py
apps/api/src/papyrus_api/domain/identity/: __init__.py  enums.py  models.py
apps/api/src/papyrus_api/domain/jobs/: __init__.py  enums.py  models.py
apps/api/src/papyrus_api/integrations/: redis.py
apps/api/src/papyrus_api/middleware/: body_size_limit.py  request_id.py  security_headers.py
apps/api/src/papyrus_api/repositories/: audit.py  base.py  documents.py  jobs.py  users.py
apps/api/src/papyrus_api/schemas/: common.py  documents.py  identity.py  jobs.py
apps/api/src/papyrus_api/services/: compress_estimate_service.py  document_service.py  identity_service.py  job_service.py  storage_service.py
apps/api/src/papyrus_api/services/pdf/: _subprocess.py  compress.py  compress_gs.py  gs_runtime.py  merge.py  ocr.py  page_ranges.py  reorder.py  rotate.py  split.py
apps/api/src/papyrus_api/workers/: beat_schedule.py  celery_app.py  runtime.py
apps/api/src/papyrus_api/workers/tasks/: _common.py  cleanup.py  pdf_pipeline.py  pdf_tools.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: test_health.py
apps/web/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: main.tsx  routeTree.gen.ts
apps/web/src/app/: providers.tsx  router.tsx
apps/web/src/app/routes/: __root.tsx  dashboard.tsx  forgot-password.tsx  index.tsx  jobs.tsx  login.tsx  reset-password.tsx  settings.tsx  signup.tsx
apps/web/src/app/routes/tools/: compress.tsx  merge.tsx  ocr.tsx  reorder.tsx  rotate.tsx  split.tsx
apps/web/src/components/brand/: logo.tsx
apps/web/src/components/cursor/: global-cursor.tsx
apps/web/src/components/layout/: app-header.tsx  app-mobile-drawer.tsx  app-shell.tsx  app-sidebar.tsx  tool-page-shell.tsx  top-nav.tsx  topbar.tsx
apps/web/src/components/marketing/: landing-sections.tsx
apps/web/src/components/shared/: anonymous-banner.tsx  error-boundary.tsx  page-range-builder.tsx  route-status.tsx  skip-link.tsx  sortable-list.tsx  zero-retention-toggle.tsx
apps/web/src/components/theme/: theme-flash.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/src/components/ui/: badge.tsx  button.test.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form-field.tsx  input.tsx  label.tsx  number-input.tsx  popover.tsx  progress.tsx  segmented.tsx  select.tsx  sheet.tsx  slider.tsx  switch.tsx  textarea.tsx  tooltip.tsx
apps/web/src/features/account/: api.ts  schemas.ts  types.ts
apps/web/src/features/auth/: api.ts  ensure-session.ts  schemas.ts  session-bootstrap.tsx  store.ts  types.ts
apps/web/src/features/auth/components/: auth-layout.tsx  error-banner.tsx  password-input.tsx
apps/web/src/features/pdf-compress/: api.ts  format.ts  presets.ts  schemas.ts  store.ts  types.ts
apps/web/src/features/pdf-compress/components/: compression-card.tsx  compression-level-selector.tsx  compression-options-panel.tsx  estimate-result.tsx  file-dropzone.tsx  job-history-list.tsx
apps/web/src/features/pdf-compress/hooks/: use-job-stream.ts  use-pdf-upload.ts  use-recover-uploads.ts  (+1 more)
apps/web/src/features/pdf-merge/: api.ts  presets.ts  schemas.ts  store.ts  types.ts
apps/web/src/features/pdf-tools/: api.ts  download.ts  file-preview.tsx  jobs-feed.ts  page-thumbnails.tsx  tool-job-card.tsx  use-auto-download.ts  use-file-page-count.ts  use-single-file-job.ts
apps/web/src/features/studio/: dropzone.tsx  inspector-frame.tsx  job-runner.tsx  page-canvas.tsx  privacy-toggle.tsx  result-card.tsx  results-drawer.tsx  results-host.tsx  session-jobs.ts  sortable-page-canvas.tsx  stage-canvas.tsx  store.ts  studio-layout.tsx  studio.tsx  tool-dock.tsx  tools.ts  types.ts  validate.ts
apps/web/src/hooks/: use-media-query.ts
apps/web/src/lib/: env.ts  motion.ts  theme.ts  uuid.ts
apps/web/src/lib/api/: client.ts  endpoints.ts  error-message.ts  query-client.ts
apps/web/src/lib/observability/: report-error.ts
apps/web/src/lib/pdf/: pdfjs.ts
apps/web/src/stores/: ui-store.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: env.d.ts
docs/: api.md  architecture.md  contributing.md  operations.md
docs/adr/: 0001-record-architecture-decisions.md
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/localstack/: init-s3.sh
infra/nginx/: web.conf
scripts/: db_reset.sh  run_minio.sh  seed.py  setup.sh
(+15 files in other folders)
